[package]
name = "pretty_regex"
version = "0.1.2"
authors = ["Adi Salimgereyev"]
description = "🧶 Elegant and readable way of writing regular expressions"
readme = "../README.md"
repository = "https://github.com/abs0luty/pretty-regex"
license = "MIT"
keywords = ["regexpr", "regular", "regex", "human-readable"]
categories = ["regex"]
documentation = "https://docs.rs/pretty_regex"
edition = "2021"

[dependencies]
regex = "1.9.3"
